# automated-planning

./: .gitignore  sas_plan
exercises/2.1/: domain.pddl  problem.pddl  solve.sh
exercises/2.2/: problem.pddl
exercises/2.3/: domain.hddl  solve.sh
exercises/2.4/: domain.pddl  problem.pddl  solve.sh
exercises/2.5/src/artifacts_plansys2/: CMakeLists.txt  deposit_artifact_beta_action.cpp  deposit_core_sample_action.cpp  load_core_sample_action.cpp  move_drone_action.cpp  move_standard_action.cpp  unseal_action.cpp
exercises/2.5/src/artifacts_plansys2/launch/: fake_actions_launch.py
exercises/2.5/src/artifacts_plansys2/pddl/: domain.pddl  problem.pddl
final project/: solve-local.sh
final project/2.1/: domain.pddl  problem.pddl
final project/2.2/: domain.pddl  problem.pddl
final project/2.3/: domain.hddl  problem.hddl
final project/2.4/: domain.pddl  problem.pddl  simple-domain-tunnel-hall.pddl  simple-domain.pddl  simple-problem-tunnel-hall.pddl  simple-problem.pddl
final project/2.5/: start-plansys2-artifact.sh  start-plansys2-terminal.sh
final project/2.5/install/: local_setup.sh  setup.sh
final project/2.5/install/artifacts_plansys2/lib/artifacts_plansys2/: charge_drone_action  cool_action  cool_off_action  deposit_artifact_alpha_action  deposit_artifact_beta_action  (+11 more)
final project/2.5/log/: latest_build
final project/2.5/src/artifacts_plansys2/: charge_drone_action.cpp  cool_action.cpp  cool_off_action.cpp  custom-params.yaml  deposit_artifact_alpha_action.cpp  fake_action.hpp  load_artifact_alpha_action.cpp  load_artifact_beta_action.cpp  move_heavy_action.cpp  package.xml  return_pod_action.cpp  seal_action.cpp  take_pod_action.cpp  unseal_action.cpp
final project/2.5/src/artifacts_plansys2/launch/: fake_actions_launch.py
final project/2.5/src/artifacts_plansys2/pddl/: domain.pddl  problem.pddl
(+19 files in other folders)
